--- a/docker-compose.https.yml
+++ b/docker-compose.https.yml
@@ -4,7 +4,7 @@ services:
     environment:
       SSL_TOMCAT_CA_CERT_LOCATION: /keystore/tomcat.keystore
       SSL_TOMCAT_CA_CERT_KEYSTOREPASS: ${JOB_SERVICE_KEYSTOREPASS:-changeit}
-      SSL_TOMCAT_CA_CERT_KEY_PASS: ${JOB_SERVICE_KEY_PASS:-changeit}
+      SSL_TOMCAT_CA_CERT_KEY_PASS: ${JOB_SERVICE_KEY_PASS:-${JOB_SERVICE_KEYSTOREPASS}}
       SSL_TOMCAT_CA_CERT_KEYSTORE_ALIAS: ${JOB_SERVICE_KEYSTORE_ALIAS:-tomcat}
     volumes:
       - ${JOB_SERVICE_KEYSTORE:-./keystore/.keystore}:/keystore/tomcat.keystore
