--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       CAF_STATUS_CHECK_TIME: 5
       CAF_TRACKING_PIPE: jobtracking-in
       CAF_WEBSERVICE_URL: http://jobservice:8080/job-service/v1
-    image: jobservice/job-service:2.0.0
+    image: rh7-artifactory.svs.hpeswlab.net:8443/caf/job-service:2.1.0-SNAPSHOT
     ports:
       - "${JOB_SERVICE_PORT:-9411}:8080"
 
