CAF-1999: Updated env and json files, Added readme. * Job Service and Job Tracker are deploying with this build and I am able to create jobs and follow them through to completion * Created readme explaining modifyable variables, etc

--- a/production-marathon/marathon.env
+++ b/production-marathon/marathon.env
@@ -1,27 +1,16 @@
-export docker_registry=index.docker.io
-export internal_proxy_host=vagrant-mesos
+# The following properties MUST be configured before the Job Service can be deployed.
 
-export marathon_uris_root=/vagrant
-export service_config_location=NOT_SET_service_config_location
-export docker_login_config=docker.tar.gz
+export DOCKER_REGISTRY=NOT_SET_QA_index.docker.io/jobservice
 
-export job_service_8080_serviceport=NOT_USED_9220
-export force_pull=true
+export JOB_SERVICE_PORT=NOT_SET_QA_9410
+export JOB_TRACKING_SERVICE_PORT=NOT_SET_QA_9440
 
-export postgres_db_port=5432
-export postgres_job_service_db_user=postgres
-export postgres_job_service_db_password=root
-export postgres_db_hostname=jobservicedb
+export POSTGRES_DB_HOSTNAME=NOT_SET_QA_192.168.56.10
+export POSTGRES_DB_PORT=NOT_SET_QA_9450
+export POSTGRES_JOB_SERVICE_DB_USER=NOT_SET_QA_postgres
+export POSTGRES_JOB_SERVICE_DB_PASSWORD=NOT_SET_QA_root
 
-export jobtracking_inputqueue=tracking-inputqueue
-export job_service_status_check_time=5
-
-export rabbit_host=vagrant-mesos
-export rabbit_port=15672
-export rabbit_user="guest"
-export rabbit_password=guest
-
-export license_serverhost=NOT_SET_license_serverhost
-export license_serverport=20000
-
-export eduction_license_directory=licenses
+export CAF_RABBITMQ_HOST=NOT_SET_QA_192.168.56.10
+export CAF_RABBITMQ_PORT=NOT_SET_QA_5672
+export CAF_RABBITMQ_USERNAME=NOT_SET_QA_guest
+export CAF_RABBITMQ_PASSWORD=NOT_SET_QA_guest
