--- a/production-swarm/docker-stack.yml
+++ b/production-swarm/docker-stack.yml
@@ -3,13 +3,13 @@ services:
   jobservice:
     env_file:
       - ./rabbitmq.env
+      - ./postgres.env
+      - ./jobservice.env
     environment:
-      CAF_DATABASE_URL: "jdbc:postgresql://${POSTGRES_DB_HOSTNAME:-NOT_SET_POSTGRES_DB_HOSTNAME}:${POSTGRES_DB_PORT:-5432}/jobservice"
       CAF_DATABASE_USERNAME: "${CAF_DATABASE_USERNAME:-postgres}"
       CAF_DATABASE_PASSWORD: "${CAF_DATABASE_PASSWORD:-root}"
       CAF_STATUS_CHECK_TIME: 5
       CAF_TRACKING_PIPE: "${CAF_TRACKING_PIPE_IN:-jobtracking-in}"
-      CAF_WEBSERVICE_URL: http://jobservice:8080/job-service/v1
     image: jobservice/job-service:latest
     deploy:
       restart_policy:
@@ -27,15 +27,15 @@ services:
         parallelism: 1
         delay: 10s
     ports:
-      - "${JOB_SERVICE_PORT:-9411}:8080"
+      - "9411:8080"
 
   worker-jobtracking:
     env_file:
-      - ./rabbitmq.env  
+      - ./rabbitmq.env
+      - ./postgres.env      
     environment:
       CAF_WORKER_INPUT_QUEUE: "${CAF_TRACKING_PIPE_IN:-jobtracking-in}"
       CAF_WORKER_OUTPUT_QUEUE: "${CAF_TRACKING_PIPE_OUT:-jobtracking-out}"
-      JOB_DATABASE_URL: "jdbc:postgresql://${POSTGRES_DB_HOSTNAME:-NOT_SET_POSTGRES_DB_HOSTNAME}:${POSTGRES_DB_PORT:-5432}/jobservice"
       JOB_DATABASE_USERNAME: "${CAF_DATABASE_USERNAME:-postgres}"
       JOB_DATABASE_PASSWORD: "${CAF_DATABASE_PASSWORD:-root}"
     image: jobservice/worker-jobtracking:latest
