CAF-2999: New Environment varialbe added to marathon templates

--- a/production-marathon/marathon.env
+++ b/production-marathon/marathon.env
@@ -2,6 +2,7 @@
 
 export DOCKER_REGISTRY=NOT_SET_DOCKER_REGISTRY
 
+export JOB_SERVICE_HOST=NOT_SET_JOB_SERVICE_HOST
 export JOB_SERVICE_8080_SERVICE_PORT=NOT_SET_JOB_SERVICE_8080_SERVICE_PORT
 export JOB_TRACKING_8080_SERVICE_PORT=NOT_SET_JOB_TRACKING_8080_SERVICE_PORT
 export JOB_TRACKING_8081_SERVICE_PORT=NOT_SET_JOB_TRACKING_8081_SERVICE_PORT
