--- a/production-swarm/docker-stack.yml
+++ b/production-swarm/docker-stack.yml
@@ -5,8 +5,8 @@ services:
       - ./rabbitmq.env
       - ./postgres.env
     environment:
-      CAF_DATABASE_USERNAME: "${CAF_DATABASE_USERNAME}"
-      CAF_DATABASE_PASSWORD: "${CAF_DATABASE_PASSWORD}"
+      CAF_DATABASE_USERNAME: "${CAF_DATABASE_USERNAME:-postgres}"
+      CAF_DATABASE_PASSWORD: "${CAF_DATABASE_PASSWORD:-root}"
       CAF_STATUS_CHECK_TIME: 5
       CAF_TRACKING_PIPE: jobtracking-in
       CAF_WEBSERVICE_URL: http://jobservice:9411/job-service/v1
@@ -36,8 +36,8 @@ services:
     environment:
       CAF_WORKER_INPUT_QUEUE: jobtracking-in
       CAF_WORKER_OUTPUT_QUEUE: jobtracking-out
-      JOB_DATABASE_USERNAME: "${CAF_DATABASE_USERNAME}"
-      JOB_DATABASE_PASSWORD: "${CAF_DATABASE_PASSWORD}"
+      JOB_DATABASE_USERNAME: "${CAF_DATABASE_USERNAME:-postgres}"
+      JOB_DATABASE_PASSWORD: "${CAF_DATABASE_PASSWORD:-root}"
     image: jobservice/worker-jobtracking:latest
     deploy:
       restart_policy:
