--- a/production-swarm/rabbitmq.env
+++ b/production-swarm/rabbitmq.env
@@ -3,13 +3,13 @@
 #
 
 ## RabbitMQ Host
-CAF_RABBITMQ_HOST=rabbitmq
+CAF_RABBITMQ_HOST=${CAF_RABBITMQ_HOST}
 
 ## RabbitMQ Port
-CAF_RABBITMQ_PORT=5672
+CAF_RABBITMQ_PORT=${CAF_RABBITMQ_PORT}
 
 ## RabbitMQ Username
-CAF_RABBITMQ_USERNAME=guest
+CAF_RABBITMQ_USERNAME=${CAF_RABBITMQ_USERNAME}
 
 ## RabbitMQ Password
-CAF_RABBITMQ_PASSWORD=guest
+CAF_RABBITMQ_PASSWORD=${CAF_RABBITMQ_PASSWORD}
